cocoa: replace blocked plugin bubble xib

This change replaces the blocked plugin bubble (the one shown when the user
clicks on the blocked-plugin decoration in the omnibox) with a new
implementation. The new bubble includes the missing "Learn More" link and has
a more consistent visual layout. This change also deletes the old xib.

Bug: 736076
Change-Id: I2c45f6684d4b090941b1f964570a7cebfaffa7eb
Reviewed-on: https://chromium-review.googlesource.com/568359
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487857}
Former-commit-id: 134fcc124a4b00378b0b52cb57bf390a1652da06