ui/base/cocoa/controls/textfield_utils.mm
@@ -14,6 +14,7 @@
   [textfield setEditable:NO];
   [textfield setFont:[NSFont systemFontOfSize:[NSFont systemFontSize]]];
   [textfield setStringValue:text];
+  [textfield setAlignment:NSNaturalTextAlignment];
   return textfield;
 }
 
